kube/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: secretarai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: sarahstrawberries/secretarai-api:0.0.2
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: secretarai
spec:
  selector:
    app: api
  ports:
  - port: 5000
    targetPort: 5000
