kube/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: secretarai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: sarahstrawberries/secretarai-web:0.0.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: secretarai
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
